# acmeCorp

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
products/: admin.py  models.py  serializer.py  urls.py  utils.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_options_product_created_at_and_more.py  0003_product_manufacturer.py  0004_currencyrate_remove_product_currency_and_more.py
users/migrations/: 0001_initial.py
